yamls file/yamls file of jenkins deployment/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
selector:
    app: jenkins
  
  ports:
  - name: http
    protocol: TCP
  - port: 8080
    targetPort: 8080
  - name: agent
    protocol: TCP
    port: 50000
    targetport :50000
  type: NodePort
